# check-mkdocs

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
changelog/: index.html
docs/: index.md
search/: search_index.json
src/check_mkdocs/: __init__.py  __main__.py  check_mkdocs.py
